<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_eight_radius_white_bk"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/login_dialog_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/custom_login_dialog_edit_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="eve.holt@reqres.in"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/login_dialog_pwd"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/custom_login_dialog_edit_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPassword"
            android:text="cityslicka"
            android:textColor="@color/black" />

    </LinearLayout>


    <Button
        android:id="@+id/custom_login_dialog_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/custom_btn"
        android:gravity="center"
        android:text="@string/common_confirm"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>