<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_list_item_lay_click_area"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/house_list_item_top_img_house"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/house_list_item_top_txt_house_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Content Test"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/house_list_item_top_txt_house_rest_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Time for rest"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/house_list_item_top_txt_house_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Area"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/house_list_item_top_txt_house_open_web"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/house_list_item_top_open_web"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/alpha10Gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/house_list_item_top_animal_info"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/house_list_item_top_txt_no_plant_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/house_list_item_top_no_animal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>